--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 27
-  buildToolsVersion '27.0.1'
+  compileSdkVersion 29
+  buildToolsVersion '29.0.2'
 
   defaultConfig {
     applicationId 'com.sqisland.android.test_demo'
-    minSdkVersion 15
-    targetSdkVersion 27
+    minSdkVersion 21
+    targetSdkVersion 29
     versionCode 1
     versionName '1.0.0'
 
@@ -25,23 +25,23 @@ android {
   }
 }
 
-final DAGGER_VERSION = '2.13'
-final RUNNER_VERSION = '1.0.1'
-final ESPRESSO_VERSION = '3.0.1'
+final DAGGER_VERSION = '2.24'
+final RUNNER_VERSION = '1.2.0'
+final ESPRESSO_VERSION = '3.2.0'
 
 dependencies {
   implementation "com.google.dagger:dagger:${DAGGER_VERSION}"
   annotationProcessor "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
   provided 'javax.annotation:jsr250-api:1.0'
-  implementation 'joda-time:joda-time:2.9.9'
+  implementation 'joda-time:joda-time:2.10.1'
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'com.google.truth:truth:0.34'
 
-  androidTestImplementation "com.android.support.test:runner:${RUNNER_VERSION}"
-  androidTestImplementation "com.android.support.test:rules:${RUNNER_VERSION}"
-  androidTestImplementation "com.android.support.test.espresso:espresso-core:${ESPRESSO_VERSION}"
-  androidTestImplementation "com.android.support.test.espresso:espresso-intents:${ESPRESSO_VERSION}"
-  androidTestImplementation 'org.mockito:mockito-android:2.12.0'
+  androidTestImplementation "androidx.test:runner:${RUNNER_VERSION}"
+  androidTestImplementation "androidx.test:rules:${RUNNER_VERSION}"
+  androidTestImplementation "androidx.test.espresso:espresso-core:${ESPRESSO_VERSION}"
+  androidTestImplementation "androidx.test.espresso:espresso-intents:${ESPRESSO_VERSION}"
+  androidTestImplementation 'org.mockito:mockito-android:2.28.2'
   androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
 }
