--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ final ESPRESSO_VERSION = '3.2.0'
 dependencies {
   implementation "com.google.dagger:dagger:${DAGGER_VERSION}"
   annotationProcessor "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
-  provided 'javax.annotation:jsr250-api:1.0'
+  compileOnly 'javax.annotation:jsr250-api:1.0'
   implementation 'joda-time:joda-time:2.10.1'
 
   testImplementation 'junit:junit:4.12'
