--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ final RUNNER_VERSION = '1.2.0'
 final ESPRESSO_VERSION = '3.2.0'
 
 dependencies {
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
   implementation "com.google.dagger:dagger:${DAGGER_VERSION}"
   kapt "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
   compileOnly 'javax.annotation:jsr250-api:1.0'
@@ -45,9 +47,8 @@ dependencies {
   androidTestImplementation "androidx.test:rules:${RUNNER_VERSION}"
   androidTestImplementation "androidx.test.espresso:espresso-core:${ESPRESSO_VERSION}"
   androidTestImplementation "androidx.test.espresso:espresso-intents:${ESPRESSO_VERSION}"
-  androidTestImplementation 'org.mockito:mockito-android:2.28.2'
+  androidTestImplementation "io.mockk:mockk-android:1.9.2"
   kaptAndroidTest "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
   mavenCentral()
