Add counter persisted in room database Updated with coroutines and LiveData

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 final DAGGER_VERSION = '2.24'
 final RUNNER_VERSION = '1.2.0'
 final ESPRESSO_VERSION = '3.2.0'
+final ROOM_VERSION = '2.2.3'
 
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -39,6 +40,23 @@ dependencies {
   kapt "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
   compileOnly 'javax.annotation:jsr250-api:1.0'
   implementation 'joda-time:joda-time:2.10.1'
+
+  // Room
+  implementation "androidx.room:room-runtime:$ROOM_VERSION"
+  kapt "androidx.room:room-compiler:$ROOM_VERSION" // For Kotlin use kapt instead of annotationProcessor
+  implementation "androidx.room:room-ktx:$ROOM_VERSION" // Coroutine support
+  testImplementation "androidx.room:room-testing:$ROOM_VERSION"
+
+  def coreVersion = '1.2.0-rc01'
+  implementation "androidx.core:core:$coreVersion"
+  implementation "androidx.core:core-ktx:$coreVersion"
+  implementation "androidx.appcompat:appcompat:1.1.0"
+
+  def activityVersion = '1.1.0-rc01'
+
+  // Coroutine lifecycle
+  implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-rc03"
+  implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03"
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'com.google.truth:truth:0.34'
